# silverWolfCaculator

./: .gitignore  CMakeLists.txt  compile_commands.json
bindsrc/: bind.cpp
data/characters/: born_stats.csv
data/light_cone/: base_stats.csv
examples/cpp/: CMakeLists.txt  actual_hp.cpp  one_hit_kill.cpp
src/: CMakeLists.txt  global.h
src/database/: CMakeLists.txt  database.cpp  database.h  database.h.orig  parser.h
src/simu/: CMakeLists.txt  simulator.cpp  simulator.h
src/watcher/: CMakeLists.txt
tools/: CMakeLists.txt  actual_hp.cpp
